[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "Rusthonian"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["version"]
description = "Python bindings for Rust crates via Rusthonian"
keywords = ["rust", "python", "bindings", "rusthonian", "uuid", "boost"]
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Rusthonian", email = "contact@rusthonian.org"}
]
maintainers = [
    {name = "Rusthonian", email = "contact@rusthonian.org"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Rusthonian/Rusthonian"
Documentation = "https://github.com/Rusthonian/Rusthonian#readme"
Repository = "https://github.com/Rusthonian/Rusthonian"
"Bug Tracker" = "https://github.com/Rusthonian/Rusthonian/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "Rusthonian"
